# ICU_data_analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.py
src/: evaluation.py  export_as_excel.py  feature_engineering.py  news2_functions.py  plots.py  preprocessing.py  run.py  train.py  utils.py
